# NReflection

NReflection/: CMakeLists.txt  CMakePresets.json  NReflection.py
NReflection/Mini/archive/: NReflectionCore.exp  NReflectionCore.lib
NReflection/Mini/install/include/NReflectionCore/public/: Bool.h  Class.h  ClassBase.h  Enum.h  EnumBase.h  EnumFactory.h  Enumerator.h  GCSystemBase.h  MemberVariableMeta.h  NReflectionCoreAPI.h  ReferenceBase.h  STLContainers.h  StaticFunctionMeta.h  StaticVariableMeta.h  TypeManager.h  Variable_traits.h
NReflection/Release/archive/: NReflectionCore.exp
NReflection/Release/install/include/NReflectionCore/public/: Any.h  Array.h  BaseNumeric.h  Class.h  ClassBase.h  ClassFactory.h  ClassMember.h  Enum.h  EnumeratorMeta.h  MemberFunction.h  MemberVariable.h  Pointer.h  Reference.h  SerializeBase.h  StaticFunction.h  StaticVariable.h  Type.h  TypeFactory.h  Void.h
NReflection/Release/install/lib/cmake/NReflection/: NReflectionConfig-release.cmake
NReflection/Source/NReflectionCore/: NReflectionCore.py
NReflection/Source/NReflectionCore/private/: ClassBase.cpp  EnumBase.cpp  NReflectionCore.cpp  Type.cpp  TypeManager.cpp
NReflection/Source/NReflectionCore/public/: Any.h  Array.h  BaseNumeric.h  Bool.h  Class.h  ClassBase.h  ClassFactory.h  ClassMember.h  EnumBase.h  GCSystemBase.h  GCSystemCore.h  MemberFunction.h  MemberFunctionMeta.h  MemberVariable.h  MemberVariableMeta.h  NReflectionCoreAPI.h  Pointer.h  Reference.h  ReferenceBase.h  SerializeBase.h  StaticFunction.h  StaticFunctionMeta.h  StaticMember.h  StaticVariable.h  StaticVariableMeta.h  Type.h  TypeFactory.h  TypeManager.h  TypeMeta.h  Variable_traits.h  Void.h
NReflection/Source/NReflectionExe/: NReflectionExe.py
NReflection/Source/NReflectionExe/private/: NReflectionExe.cpp
NReflection/archive/: NReflectionCore.exp  NReflectionCore.lib
NReflection/install/include/NReflectionCore/public/: ClassBase.h  GCSystemCore.h  MemberFunction.h  MemberFunctionMeta.h  StaticFunction.h  StaticMember.h  TypeMeta.h  Variable_traits.h
NReflection/install/lib/: NReflectionCore.lib
NReflection/install/lib/cmake/NReflection/: NReflectionConfig-debug.cmake  NReflectionConfig-relwithdebinfo.cmake
